# birthdj

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DISTRIBUTION.md  PRIVACY.md  README.md  blocked_artists.txt.example  conftest.py  create_playlist.py  master_prompt.md.example  netlify.toml  pyproject.toml  requirements.txt  settings.json.bak  song_history.json.bak
.github/workflows/: deploy.yml
.tasks/waveform-v2/: BETA_CHECKLIST.md  PHASE2_BACKLOG.md  PIPELINE.md  execution-log.md  plan.md
landing/: index.html
tests/: test_create_playlist.py  test_custom_archetypes.py  test_genre_expansion.py
waveform/: __init__.py  __main__.py
waveform/app/: __init__.py  export.py  generation.py  main.py  state.py
waveform/assets/fonts/: .gitkeep
waveform/domain/: __init__.py  block.py  event.py  genre.py  session.py
waveform/prompts/: veto_addendum.md
waveform/services/: __init__.py  analytics.py  cover_art.py  gemini_client.py  persistence.py  preview_audio.py  spotify_client.py
waveform/tests/: __init__.py  test_analytics.py  test_cover_art.py  test_custom_archetypes.py  test_domain.py  test_export.py  test_generation.py  test_genre_expansion.py  test_genre_weight_system.py  test_persistence.py  test_services.py
waveform/ui/: __init__.py  analytics_consent.py  archetype_editor.py  event_setup.py  export_dialog.py  prompt_editor.py  session_history.py  settings_screen.py  shell.py  sidebar_schedule.py  theme.py  timeline_canvas.py  track_panel.py
waveform/ui/widgets/: __init__.py  block_card.py  event_template_card.py  genre_slider.py  track_card.py  (+2 more)
